--- a/package.json
+++ b/package.json
@@ -4,10 +4,17 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host 0.0.0.0",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "test": "echo \"Warning: no test specified\"",
+    "cspell": "cspell --config cspell.json \"**/*.{ts,tsx,js,jsx,json}\"",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "prepare": "husky",
+    "docker-dev-up": "docker-compose -f docker-compose-dev.yaml up -d --build",
+    "docker-up": "docker-compose up -d --build",
+    "docker-dev-down": "docker-compose -f docker-compose-dev.yaml down",
+    "docker-down": "docker-compose down"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -19,9 +26,20 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
-    "eslint": "^8.45.0",
+    "cspell": "^8.6.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "husky": "^9.0.11",
+    "i18next": "^23.10.1",
+    "lodash": "^4.17.21",
+    "prettier": "^3.2.5",
+    "react-i18next": "^14.1.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
