--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-i18next": "^14.1.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-tsconfig-paths": "^4.3.1"
   }
 }
