--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.19",
     "cspell": "^8.6.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
@@ -37,6 +38,7 @@
     "husky": "^9.0.11",
     "i18next": "^23.10.1",
     "lodash": "^4.17.21",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "react-i18next": "^14.1.0",
     "tailwindcss": "^3.4.1",
